--- a/src/landingpage/components/ourvideo/ourvideo.css
+++ b/src/landingpage/components/ourvideo/ourvideo.css
@@ -29,15 +29,6 @@
         flex-direction: column;
         justify-content: flex-start;
     }
-    .ourVideoContainer::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(255, 255, 255, 0.8);
-    }
     .ourVideoContainer h1 {
         width: 65%;
         height: fit-content;
@@ -53,31 +44,30 @@
         word-wrap: break-word; 
     }
     
-    .ourVideoContainer .video-react {
-        width: 70%;
+    .ourVideoContainer video {
+        width: 80%;
         margin: auto;
-        height: 400px;
+        height: fit-content;
         padding: 0;
+        cursor: pointer;
     }
 
-    .ourVideoContainer .video-react .video-react-button {
+    /* .ourVideoContainer .video-react .video-react-button {
         top: 50%;
         left: 50%;
         width: 100px;
         height: 100px;
         border-radius: 50%;
         background-color: white;
-    }
+    } */
     
 }
 
 @media (max-width: 992px) {
-    /*mobile design*/
+    /*desktop design*/
     .ourVideoContainer {
         width: 100%;
-        height: fit-content;
-        background: url('./assets/bigimagethree.jpeg') no-repeat;
-        background-size: cover;
+        height: 500px;
         margin: 0;
         padding: 0;
         position: relative;
@@ -85,15 +75,6 @@
         flex-direction: column;
         justify-content: flex-start;
     }
-    .ourVideoContainer::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(255, 255, 255, 0.8);
-    }
     .ourVideoContainer h1 {
         width: 65%;
         height: fit-content;
@@ -108,33 +89,22 @@
         position: relative;
         word-wrap: break-word; 
     }
-    .ourVideoContainer p {
-        color: black;
-        z-index: 2;
-        width: 70%;
-        height: fit-content;
-        text-align: center;
-        font-family: 'OpenSans';
-        font-size: 1em;
-        text-decoration: 0 5px 5px 0 black;
-        font-weight: 400;
+    
+    .ourVideoContainer video {
+        width: 80%;
         margin: auto;
+        height: fit-content;
+        padding: 0;
+        cursor: pointer;
     }
-    .ourVideoContainer button {
-        z-index: 2;
-        width: 250px;
-        border-radius: 50px;
-        margin: 50px auto;
-        background-color: rgb(116,188,65);
-        padding: 10px;
-        font-family: 'OpenSans';
-        font-size: 1.5em;
-        font-weight: bolder;
-        color: white;
-        transition: all .3s ease-in;
-    }
-    .ourVideoContainer button:hover {
-        box-shadow: 0 4px 4px 0 black;
-    }
+
+    /* .ourVideoContainer .video-react .video-react-button {
+        top: 50%;
+        left: 50%;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background-color: white;
+    } */
     
 }
