--- a/src/programs/components/programCard/programcard.css
+++ b/src/programs/components/programCard/programcard.css
@@ -196,7 +196,7 @@
   }
   .careerCard ul li {
     width: 95%;
-    list-style-type:decimal;
+    list-style-type:circle;
     margin-top: 10px;
     word-wrap: break-word;
   }
