--- a/src/programs/components/programCard/programcard.css
+++ b/src/programs/components/programCard/programcard.css
@@ -208,15 +208,16 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
-    margin-bottom: 50px;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 
   .careerCard div button {
     color: white;
     background-color: #03c483;
     padding: 20px;
-    position: relative
+    position: relative;
+    margin: 50px 0 50px 0;
   }
   .careerCard div button::before {
     position: absolute;
