--- a/src/admission/components/form/form.css
+++ b/src/admission/components/form/form.css
@@ -1,6 +1,6 @@
 
     .step-1 {
-      width: 65%;
+      width: 85%;
       height: fit-content;
       position: relative;
     }
@@ -10,13 +10,13 @@
       margin: 0 0 10px 20px;
     }
     .inputStyles {
-      width: 100%;
+      width: 90%;
       border: 1px solid black;
       cursor: pointer;
       font-size: 1.2em;
       font-weight: 400;
       color: hsl(213, 96%, 18%);
-      padding: 12px;
+      padding: 5px;
       border-radius: 10px;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
@@ -27,14 +27,14 @@
       outline: none;
       border: 1px solid hsl(243, 100%, 62%);
     }
-    .inputControl:nth-child(1) input {
+    /* .inputControl:nth-child(1) input {
       border: 1px solid black;
     }
     .inputControl:nth-child(3) input {
       border: 1px solid darkred;
-    }
+    } */
     .inputControl label {
-      width: 100%;
+      width: 90%;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -92,9 +92,10 @@
 
     .navigation {
       background: url("./assets/images/bg-sidebar-desktop.svg") no-repeat;
-      background-size: contain;
-      width: 250px;
+      background-size: cover;
+      width: fit-content;
       height: 500px;
+      padding: 10px;
     }
     .nav-item-forms {
       width: 100%;
@@ -103,7 +104,7 @@
       flex-direction: row;
       justify-content: flex-start;
       align-items: center;
-      padding: 30px;
+      margin-top: 30px;
       cursor: pointer;
     }
     .nav-item-count{
