--- a/src/landingpage/components/bannerfour/bannerfour.css
+++ b/src/landingpage/components/bannerfour/bannerfour.css
@@ -27,7 +27,7 @@
     .bannerFourContainer {
         width: 100%;
         height: fit-content;
-        background: url('./assets/DSC_6801.JPG') no-repeat;
+        background: url('./assets/DSC_6854.JPG') no-repeat;
         background-size: cover;
         margin: 0;
         padding: 0;
@@ -114,7 +114,7 @@
   }
   .contentSlider .swiper-slide div img {
     width: 100%;
-    height: 300px;
+    height: 80%;
     background-size: contain;
     object-fit: cover;
   }
@@ -176,7 +176,7 @@
     .bannerFourContainer {
         width: 100%;
         height: fit-content;
-        background: url('./assets/DSC_6801.JPG') no-repeat;
+        background: url('./assets/DSC_6854.JPG') no-repeat;
         background-size: cover;
         margin: 0;
         padding: 0;
